Suppress unchecked, rawtypes, etc warnings.  Removed redundant casts.  Addressed deprecations.  To resolve deprecated Session.createCriteria().